--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,8 +53,15 @@
         android:textSize="14sp" />
 
     <TextView
-        android:id="@+id/listFile"
+        android:id="@+id/tv_end_service"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="游戏结束"
+        android:textColor="#fff"
+        android:textSize="14sp" />
 
 </LinearLayout>
