--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:padding="15dp"
-        android:text="开启服务"
+        android:text="开启防封检测服务"
         android:textColor="#fff"
         android:textSize="14sp" />
 
