--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,15 @@
 
 
             <TextView
+                android:id="@+id/text_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text=""
+                android:textColor="@color/colorAccent" />
+
+            <TextView
                 android:id="@+id/tv_is_root"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -47,7 +56,8 @@
                 android:gravity="center"
                 android:padding="12dp"
                 android:text="应用申请无障碍权限"
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_start_internet_service"
@@ -58,6 +68,18 @@
                 android:gravity="center"
                 android:padding="12dp"
                 android:text="开启国际服防封检测服务"
+                android:textColor="#fff"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_start_internet_service_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:background="@color/colorPrimary"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="没有悬浮窗点我开启国际服防封检测服务"
                 android:textColor="#fff"
                 android:textSize="14sp" />
 
